--- a/css/screen.css
+++ b/css/screen.css
@@ -137,7 +137,7 @@ border-radius: 30px;
 }
 
 /*Skills bar on homepage */
-div#mainbar {
+div#home-about {
 display: block;
 /* position: absolute; */
 /*left: 0px;  */
@@ -146,7 +146,7 @@ float: left;
 width: 100%;     /*308 / 1292 = .23839  */
 /* margin: 200px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
-/*background-color: #D0C8B4;
+background-color: #D0C8B4;
 margin-top: .*/
 }
 
@@ -160,17 +160,10 @@ float: left;
 width: 19.97%;     /*258 / 1292 = .19969  */
 /* margin: 200px 20px 0px 30px;
 padding: 15px 15px 400px 20px;
-/*background-color: #D0C8B4;
+background-color: #D0C8B4;
 margin-top: .*/
 }
 
-div#skillshapes {
-
-background: blue;
-/* margin-top: 30px; */
-width: 100%;
-margin-top:  4.14%; /* 53.5/1292 = .0414 */
-}
 
 
 p.blurb {
@@ -180,76 +173,6 @@ color: #3D3348;
 font-weight: bold;
 }
 
-div#skillshapes p {
-font-family: Georgia, sans-serif;
-font-weight: bold;
-}
-
-.circle-1 {
-width: 6%;
-background: #8682AC;
-padding: 75px;
-border-radius: 15px;
-float: left;
-margin: 5px;
-}
-
-.square-1 {
-width: 6%;
-background: #354251;
-padding: 75px;
-float: left;
-margin: 5px;
-margin-left: 1.54%;   /* 20/1292= .015479 */
-border-radius: 15px;
-
-}
-
-.circle-2 {
-width: 6%;
-background: #7E92A9;
-padding: 75px;
-border-radius: 15px;
-float: left;
-margin: 5px;
-margin-left: 1.54%;   /* 20/1292= .015479 */
-}
-
-.square-2 {
-width: 6%;
-background: #203042;
-padding: 75px 90px;
-float: left;
-margin: 5px;
-margin-left: 1.54%;   /* 20/1292= .015479 */
-border-radius: 100px;
-
-}
-
-.circle-3 {
-width: 6%;
-background: #BEB289;
-padding: 75px;
-border-radius: 15px;
-float: left;
-margin: 5px;
-margin-left: 1.54%;   /* 20/1292= .015479 */
-}
-
-.square-3 {
-width: 6%;
-background: #453753;
-padding: 75px;
-float: left;
-margin: 5px;
-margin-left: 1.54%;   /* 20/1292= .015479 */
-border-radius: 15 px;
-
-}
-
-.square-3: hover {
-border-radius: -100px;
-}
 
 
 
