opened up about on home

--- a/css/screen.css
+++ b/css/screen.css
@@ -136,7 +136,7 @@ border-bottom-right-radius: 15px;
 border-radius: 30px;
 }
 
-/*Skills bar on homepage */
+/*About blurb on Home Page */
 div#home-about {
 display: block;
 /* position: absolute; */
