--- a/css/screen.css
+++ b/css/screen.css
@@ -381,20 +381,37 @@ color: #6B956B;
 /*  Footer   */
 
 div#footer {
-float: left; 
-position: relative;
-z-index: 9999;
-background: #434157;
-width: 100%;
-padding: 20px 0px 100px 0px;
-margin-top:  4.14%; /* 53.5/1292 = .0414 */
+    float: left; 
+    position: relative;
+    z-index: 9999;
+    background: #434157;
+    width: 100%;
+    padding: 20px 0px 100px 0px;
+    margin-top:  4.14%; /* 53.5/1292 = .0414 */
 }
 
-div#footer p {
-text-align: right;
-padding-right: 30px;
-color: white;
+div#contact {
+    width: 25%;
+    border-right: 1px solid white;
 }
+
+div#footer h3 {
+    font-size: 2em;
+    color: white;
+    padding-left: 30px;
+}
+
+div#footer p a{
+    display: inline;
+    padding-left: 30px;
+    color: white;
+}
+
+div#footer img {
+    width: 30px;
+    padding-left: 30px;
+}
+
 
 
 
