--- a/css/screen.css
+++ b/css/screen.css
@@ -47,17 +47,19 @@ div#page {
 
 /************Header ********/
 div#topblock {
-    background: #493D55;
-    padding: 10px 0px 0px 0px;
     width: 100%;
+    padding: 10px 0px 0px 0px;
+    background: #493D55;
+   -webkit-box-shadow: inset 0px -7px 7px -7px #000; 
+    -moz-box-shadow: inset 0px 7px 7px -7px #000; 
+    box-shadow: inset 0px 7px 7px -7px #000;
 }
 
 div#header {
     display: block;
-    width: 84%; /* 1143/1366= .836 */
+    width: 92%;     /*  1254/1366= .918 */
     margin: auto;
-   /* float: left;
-     width:  38.08%;    492 / 1292 = .3808 */
+    margin-top: .3em;
 }
 
 div#header img {
@@ -78,13 +80,18 @@ ul#navigation li a{
     /*font-weight: bold;  */
     font-size: 1.1em;
     color: #fff;
+    text-align: center;
 }
 
 .about, .work, .home, .connect {
     width: 9.9%;     /*128 / 1292 = .0990 */
     float: left;
-    padding: 100px 50px 15px 20px; 
+    padding: 100px 35px 15px 35px; 
     margin: 0px;
+    border-radius: 50px;
+    -webkit-box-shadow: inset 6px -7px 7px -9px #000; 
+    -moz-box-shadow: inset 6px -7px 7px -9px #000; 
+    box-shadow: inset 6px -7px 7px -9px #000;
 }
 
 .home {
@@ -166,7 +173,7 @@ div#big-blurb {
 }
 
 div#big-blurb {
-font-size: 8em;  
+font-size: 9em;  
 font-family: "Montserrat", "Myriad Pro", Arial, serif;
 color: /*#7E92A9*/ rgba(197, 214, 215, 0.6);
 font-weight: 700;
