--- a/css/screen.css
+++ b/css/screen.css
@@ -157,7 +157,7 @@ p.blurb {
 /******* Non-Index/Home Pages */
 /*Introductory Large text */
 div#wrapper {
-    width: 81%;
+    width: 82%; /*  1115/1366= .816 */
     margin: 0 auto;
     clear: both;
     /*background: yellow;*/
@@ -324,8 +324,8 @@ div#print-digital h2{
 @media screen (min-width:1275px)   {
 div#about, div#work {
     display: block;
-    /*margin-left: 40%;
-    margin-top: 5%; */
+    margin-left: 36%;  /* 501/1366= .3667*/
+    margin-top: 5%;
     background: rgb (197, 214, 215);
     background: rgba(197, 214, 215, 0.2);
     border-top-right-radius: 15px;
@@ -337,15 +337,16 @@ div#about, div#work {
 div#about p, div#work ul, div#work p {
     font-family: "Lato", /*"Noto Sans", "Puritan", "Sans Source Pro", "Varela", */Arial, sans-serif;
     margin-bottom: 1.3em;
-    font-size: 1.1em;
+    font-size: 1em;
     line-height: 1.6em;
     color: #484754;
 }
 
-div#work h3 {
+div#work h3, div#about h3 {
     color: #43405D;
     font-family: "Lato", Arial, sans-serif;
-    font-size:2em;
+    font-size: 1.9em;
+    line-height: 2.1em;
 }
 
 div#work ul{
@@ -368,10 +369,10 @@ div#work li{
 
 } /******end 1275px @media screen ********/
 
-@media screen (min-width:1000px)   {
+/*@media screen (min-width:1000px)   {
 div#about {
     display: block;
-    margin-left: 25%; /*diff */
+    margin-left: 25%; 
     margin-top: 5%;
     background: rgb (197, 214, 215);
     background: rgba(197, 214, 215, 0.3);
@@ -383,10 +384,10 @@ div#about {
 
 div#about p {
     margin-bottom: 1.3em;
-    font-size: 1.1em;
+    font-size: 1em;
     line-height: 1.6em;
     color: #484754;
-}
+}*/
 
 
 } /*******end 1000px @media screen ******/
