--- a/css/screen.css
+++ b/css/screen.css
@@ -29,10 +29,10 @@ html {
     font-family: Arial, sans-serif;
     font-size: 16px;
     background: #E0DFDD;
-   /* background-image: -ms-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* IE*/
-       /*background-image: -moz-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* Mozilla Firefox */ 
-       /*background-image: -o-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* Opera */ 
-      /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #C1C0BE)); /* Webkit (Safari) */  
+    background-image: -ms-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* IE*/
+    background-image: -moz-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* Mozilla Firefox */ 
+    background-image: -o-linear-gradient(top, #FFFFFF 0%, #C1C0BE 100%); /* Opera */ 
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #C1C0BE)); /* Webkit (Safari) */  
 }
 
 body { 
@@ -433,21 +433,29 @@ div#contact {
    
 }
 
-div#footer h3 {
+div#contact h3 {
     font-size: 2.1em;
     color: white;
      font-weight: 700;
 }
 
-div#footer p a{
+div#contact p a{
     display: inline;
     color: white;
 }
 
-div#footer img {
+div#contact img {
     width: 30px;
 }
 
+div#commons p {
+    float: right;
+    color: #fff;
+}
+
+div#commons p a {
+    color: #BEC1E3;
+}
 
 
 
