media queries added for header and nav

--- a/css/screen.css
+++ b/css/screen.css
@@ -3,10 +3,12 @@
 /* Base Styles */
 
 /* colors
-muted purple: #5B5870 (k in logo)
-muted teal: #525C6A
-muted 
+purple: #5B5870 (k in logo)
 
+dark teal: #3B4652
+grey blue purple: #434157 (nav-home)
+blue purple: #43405D (nav-connect) 
+violet: #493D55;
 */
 
 /* ids and classes
@@ -23,7 +25,7 @@ to do: html 5 ids (e.g. footer)
 */
 
 
-/*************************ALL PAGES************/
+/*************************ALL PAGES*********************/
 html {
     display: block;
     font-family: Arial, sans-serif;
@@ -41,11 +43,9 @@ body {
 
 div#page {
     margin: 0em; 
-    /*padding: 0 1em;*/
-    /*max-width: 80.75em; 1292 / 16px= 80.75%*/
 }
 
-/************Header ********/
+/************Header (including Navigation) *****/
 div#topblock {
     width: 100%;
     padding: 10px 0px 0px 0px;
@@ -62,30 +62,123 @@ div#header {
     margin-top: .3em;
 }
 
+/* div#header img {
+    width:  33%;  457/1366= .334    
+}*/
+
+@media screen and (max-width: 768px) {
 div#header img {
-/* width:  27.05%;    349.5 / 1292 = .2705 */
-    width: 349.5px;
+    width:  85%; 
+    margin: auto;
+}
 }
 
-/*****Navigation* HTML5??? nav */
+@media screen and (min-width: 769px) {
+div#header img {
+    width:  38%;  /*      /1366=   */
+    margin: auto; 
+}
+}
+
+/*@media screen and (max-width: 865px) {
 ul#navigation {
-    /*width: 39.62% ;     512 / 1292 = .3962  */
+    clear: both;
+}
+}*/
+
+ul#navigation {
     display: inline;
-    float: right;
-     /*margin-left: 9.52%;   distance between logo header and navigation     123 / 1292= .0952    */
+    float: left;
+    margin: auto;
+}
+
+@media screen and (min-width: 600px) {
+ul#navigation {
+    display: inline;
+    float: right;  
+    margin:  auto 15%;
+}
+}
+@media screen and (min-width: 863px) {
+ul#navigation {
+    display: inline;
+   /* float: right; */
+    margin: auto;
+}
 }
 
 ul#navigation li a{
-    font-family: "Karla", Georgia, serif;
-    /*font-weight: bold;  */
-    font-size: 1.1em;
+    font-family: "Karla", Arial, sans-serif;
+    font-size: .9em;
     color: #fff;
     text-align: center;
 }
+@media screen and (min-width: 600px) {
+ul#navigation li a{
+    font-family: "Karla", Arial, sans-serif;
+    font-size: 1em;
+    color: #fff;
+    text-align: center;
+}
+}
+
+@media screen and (min-width: 865px) {
+ul#navigation li a{ 
+    font-size: 1.1em;
+}
+}
 
 .about, .work, .home, .connect {
-    width: 9.9%;     /*128 / 1292 = .0990 */
+    width: 20%;     
     float: left;
+    padding: 60px 28px 5px 28px; 
+    margin: 0px; 
+    border-radius: 35px;
+    -webkit-box-shadow: inset 6px -7px 7px -9px #000; 
+    -moz-box-shadow: inset 6px -7px 7px -9px #000; 
+    box-shadow: inset 6px -7px 7px -9px #000;
+}
+
+@media screen and (min-width: 480px) {
+.about, .work, .home, .connect {
+    width: 11%;     
+    padding: 70px 26px 5px 26px; 
+    /* margin: autopx; */
+    border-radius: 32px;
+    -webkit-box-shadow: inset 6px -7px 7px -9px #000; 
+    -moz-box-shadow: inset 6px -7px 7px -9px #000; 
+    box-shadow: inset 6px -7px 7px -9px #000;
+}
+}
+
+@media screen and (min-width: 610px) {
+.about, .work, .home, .connect {
+    width: 10%;     
+    padding: 80px 30px 8px 30px; 
+   /* margin: auto;*/
+    border-radius: 45px;
+    -webkit-box-shadow: inset 6px -7px 7px -9px #000; 
+    -moz-box-shadow: inset 6px -7px 7px -9px #000; 
+    box-shadow: inset 6px -7px 7px -9px #000;
+}
+}
+/*
+@media screen and (min-width: 600px) {
+.about, .work, .home, .connect {
+    width: 13%;     
+    float: left;
+    padding: 80px 30px 8px 30px; 
+    margin: 0px;
+    border-radius: 45px;
+    -webkit-box-shadow: inset 6px -7px 7px -9px #000; 
+    -moz-box-shadow: inset 6px -7px 7px -9px #000; 
+    box-shadow: inset 6px -7px 7px -9px #000;
+}
+}
+*/
+@media screen and (min-width: 863px) {
+.about, .work, .home, .connect {
+    width: 9.8%;     /*135/ 1366= .0988 */
     padding: 100px 35px 15px 35px; 
     margin: 0px;
     border-radius: 50px;
@@ -93,6 +186,15 @@ ul#navigation li a{
     -moz-box-shadow: inset 6px -7px 7px -9px #000; 
     box-shadow: inset 6px -7px 7px -9px #000;
 }
+}
+
+
+
+/* @media screen and (min-width: 769px) {
+div#header img {
+    width:  60%; 
+    margin: auto; 
+} */
 
 .home {
     background-color: #434157;
@@ -116,17 +218,15 @@ ul#navigation li a{
 
 .home:active, .home:hover,
 .about:active, .about:hover,
-.work:active, .work:hover  {
-    border-bottom-left-radius: 15px; 
-    padding-top: 110px; /***DOES THIS WORK IN ALL BROWSERS?*/
-}
-.connect:active, .connect:hover {
-    border-bottom-right-radius: 15px;
-    padding-top: 110px;
+.work:active, .work:hover,
+.connect:active, .connect:hover  {
+    padding-top: 115px; /***DOES THIS WORK IN ALL BROWSERS?*/
 }
 
 
-/********************INDEX */
+
+
+/********************HOME PAGE*************/
 div#big-blurb-home {
    display: block;
     width: 100%;
@@ -416,7 +516,7 @@ div#footer {
     min-width: 100%;
     clear: both;
     background: #434157;
-    padding: 20px 0px 100px 0px;
+    padding: 20px 0px 90px 0px;
     margin-top:  4.14%; /* 53.5/1292 = .0414 */
     -webkit-box-shadow: inset 0px 7px 7px -7px #000; 
     -moz-box-shadow: inset 0px 7px 7px -7px #000; 
